force-app/main/default/objects/Payment_Summary__c/fields/DLD_Admin_fees__c.field-meta.xml
<CustomField>
    <fullName>DLD_Admin_fees__c</fullName>
    <label>DLD Admin fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>