force-app/main/default/objects/Payment_Summary__c/fields/Grand_Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Collected__c</fullName>
    <formula>IF(Total_Collected__c &gt; 0, Total_Collected__c + rera_Posted_Other__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>