force-app/main/default/objects/Payment_Summary__c/fields/Grand_Total_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Reconciled__c</fullName>
    <formula>IF(Total_Reconciled__c &gt; 0, Total_Reconciled__c + rera_Reconciled_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Reconciled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>