force-app/main/default/objects/Payment_Summary__c/fields/Grand_Total_Reconciled_Percent__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Reconciled_Percent__c</fullName>
    <formula>IF( Grand_Total_Reconciled__c &gt; 0, IF(Opportunity__r.Amount &lt;= Grand_Total_Reconciled__c,( Grand_Total_Reconciled__c / Opportunity__r.Amount ) , 1) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Reconciled %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>