force-app/main/default/objects/Payment_Summary__c/fields/in01_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>in01_Amount_Due__c</fullName>
    <formula>IF((in01_Posted_Other__c - in01_Reconciled_Amount__c) &gt;= 0, in01_Posted_Other__c - in01_Reconciled_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in01 Amount Yet to be Reconciled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>