force-app/main/default/objects/Payment_Summary__c/fields/in01_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>in01_Amount_Pending__c</fullName>
    <formula>in01_Invoice_Amount__c  -  in01_Posted_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in01 Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>