force-app/main/default/objects/Payment_Summary__c/fields/in01_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>in01_Invoice_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store installment 1 payment plan amount from booking unit</description>
    <label>in01 Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>