force-app/main/default/objects/Payment_Summary__c/fields/in01_Invoice_Percent__c.field-meta.xml
<CustomField>
    <fullName>in01_Invoice_Percent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store installment 1 payment plan percent from booking unit</description>
    <label>in01 Invoice Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>