force-app/main/default/objects/Payment_Summary__c/fields/in01_Posted_Other__c.field-meta.xml
<CustomField>
    <fullName>in01_Posted_Other__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store installment 1 all posted and reconciled amount from Yardi</description>
    <label>in01 Posted (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>