force-app/main/default/objects/Payment_Summary__c/fields/in02_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>in02_Amount_Due__c</fullName>
    <formula>IF((in02_Posted_Other__c -  in02_Reconciled_Amount__c) &gt;= 0, in02_Posted_Other__c -  in02_Reconciled_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in02 Amount Yet to be Reconciled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>