force-app/main/default/objects/Payment_Summary__c/fields/in02_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>in02_Amount_Pending__c</fullName>
    <formula>in02_Invoice_Amount__c - in02_Posted_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in02 Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>