force-app/main/default/objects/Payment_Summary__c/fields/in02_Posted_BT_CC_Cash__c.field-meta.xml
<CustomField>
    <fullName>in02_Posted_BT_CC_Cash__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store installment 2 Posted Amount from Yardi with Payment method as &quot;Bank transfer, Cash and Credit Card&quot;</description>
    <label>in02 Posted (BT+CC+Cash)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>