force-app/main/default/objects/Payment_Summary__c/fields/in02_Posted_Other__c.field-meta.xml
<CustomField>
    <fullName>in02_Posted_Other__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store installment 2 all posted and reconciled amount from Yardi</description>
    <label>in02 Posted (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>