force-app/main/default/objects/Payment_Summary__c/fields/PDC_Amount__c.field-meta.xml
<CustomField>
    <fullName>PDC_Amount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field will store PDC Amount corresponding to the PDC installment code selected. This will be integrated from Yardi</description>
    <label>PDC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>