force-app/main/default/objects/Payment_Summary__c/fields/PDC_Installment_Code__c.field-meta.xml
<CustomField>
    <fullName>PDC_Installment_Code__c</fullName>
    <description>This field will hold the installment code for which salesforce requires PDC amount</description>
    <label>PDC Installment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>