force-app/main/default/objects/Payment_Summary__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <description>Property Code from Booking Unit/Inventory</description>
    <label>Property Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>