force-app/main/default/objects/Payment_Summary__c/fields/rera_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>rera_Amount_Due__c</fullName>
    <formula>IF((rera_Posted_Other__c -  rera_Reconciled_Amount__c) &gt;= 0, rera_Posted_Other__c -  rera_Reconciled_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Amount Yet to be Reconciled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>