force-app/main/default/objects/Payment_Summary__c/fields/rera_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>rera_Amount_Pending__c</fullName>
    <formula>rera_Invoice_Amount__c - rera_Posted_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Amount Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>