force-app/main/default/objects/Payment_Summary__c/fields/rera_BCC_Reconciled_Amount__c.field-meta.xml
<CustomField>
    <fullName>rera_BCC_Reconciled_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store rera Reconciled Amount from Yardi with Payment method as &quot;Bank transfer, Cash and Credit Card&quot;</description>
    <label>DLD BCC Reconciled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>