force-app/main/default/objects/Payment_Summary__c/fields/rera_Collected_Percent__c.field-meta.xml
<CustomField>
    <fullName>rera_Collected_Percent__c</fullName>
    <formula>IF(rera_Posted_Other__c &gt; 0, IF(rera_Invoice_Amount__c &lt;= rera_Posted_Other__c, ( rera_Posted_Other__c / rera_Invoice_Amount__c ) , 1) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Collected %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>