force-app/main/default/objects/Payment_Summary__c/fields/rera_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>rera_Invoice_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store rera amount from Opportunity</description>
    <label>DLD Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>