force-app/main/default/objects/Payment_Summary__c/fields/rera_Invoice_Percent__c.field-meta.xml
<CustomField>
    <fullName>rera_Invoice_Percent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store rera percent from Opportunity</description>
    <label>DLD Invoice Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>