force-app/main/default/objects/Payment_Summary__c/fields/rera_Posted_Other__c.field-meta.xml
<CustomField>
    <fullName>rera_Posted_Other__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store rera all posted and reconciled amount from Yardi</description>
    <label>DLD Posted (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>