force-app/main/default/objects/Payment_Summary__c/fields/Rera_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Rera_Reconciled__c</fullName>
    <formula>IF( rera_Reconciled_Amount__c &gt; 0, IF(rera_Invoice_Amount__c &gt;= rera_Reconciled_Amount__c , ( rera_Reconciled_Amount__c / rera_Invoice_Amount__c ) , 1) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Reconciled %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>