force-app/main/default/objects/Payment_Summary__c/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <label>Sales Admin</label>
    <type>Email</type>
</CustomField>