force-app/main/default/objects/Payment_Summary__c/fields/SOA_Generated__c.field-meta.xml
<CustomField>
    <fullName>SOA_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOA Generated</label>
    <type>Checkbox</type>
</CustomField>