force-app/main/default/objects/Payment_Summary__c/fields/Sync_PDC__c.field-meta.xml
<CustomField>
    <fullName>Sync_PDC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will sync PDC flag from Yardi to Salesforce</description>
    <label>Sync PDC</label>
    <type>Checkbox</type>
</CustomField>