force-app/main/default/objects/Payment_Summary__c/fields/Sync_SOA__c.field-meta.xml
<CustomField>
    <fullName>Sync_SOA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will sync SOA report from Yardi to Salesforce</description>
    <label>Sync SOA</label>
    <type>Checkbox</type>
</CustomField>