force-app/main/default/objects/Payment_Summary__c/fields/Sync_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sync_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will sync payment details from Yardi to Salesforce</description>
    <label>Sync Summary</label>
    <type>Checkbox</type>
</CustomField>