force-app/main/default/objects/Payment_Summary__c/fields/Sync_Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Sync_Total_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will sync total collected value from Yardi to Salesforce</description>
    <label>Sync Total Collected</label>
    <type>Checkbox</type>
</CustomField>