force-app/main/default/objects/Payment_Summary__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store Total Collected Amount for all installments from Yardi</description>
    <label>Total Collected(Includes Advances)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>