force-app/main/default/objects/Payment_Summary__c/fields/Total_Collected_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected_Percent__c</fullName>
    <description>IF( Total_Collected__c &gt; 0, IF(Opportunity__r.Amount &gt;= Total_Collected__c, ( Total_Collected__c / Opportunity__r.Amount  ) , 1) , 0)</description>
    <formula>IF( Total_Collected__c &gt; 0, IF(Opportunity__r.Amount &gt;= Total_Collected__c, ( Total_Collected__c / (Opportunity__r.Amount +  rera_Invoice_Amount__c ) ) , 1) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Collected %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>