force-app/main/default/objects/Payment_Summary__c/fields/Total_DP_Reconciled_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_DP_Reconciled_Percent__c</fullName>
    <formula>IF(Total_Reconciled__c &gt; 0, IF(Opportunity__r.Amount &gt;= Total_Reconciled__c, ( Total_Reconciled__c / Opportunity__r.Amount  ) , 1) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total DP Reconciled %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>