force-app/main/default/objects/Payment_Summary__c/fields/Total_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Total_Reconciled__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This will store Total Reconciled Amount from Yardi</description>
    <label>Total Reconciled (Includes Advances)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>