force-app/main/default/objects/Payment_Summary__c/fields/X2nd_PDC_Submitted_Yardi__c.field-meta.xml
<CustomField>
    <fullName>X2nd_PDC_Submitted_Yardi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd PDC Submitted - Yardi</label>
    <type>Checkbox</type>
</CustomField>